--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/app": "^8.4.6",
+    "@react-native-firebase/auth": "^9.3.1",
+    "@react-navigation/bottom-tabs": "^5.10.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
+    "firebase": "^7.24.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
